integro requisitos finales