@@ -5,41 +5,50 @@ import com.example.ms_envios.dto.SeguimientoRequestDTO;
 import com.example.ms_envios.exception.ResourceNotFoundException;
 import com.example.ms_envios.mapper.SeguimientoMapper;
 import com.example.ms_envios.model.Seguimiento;
+import com.example.ms_envios.repository.EnvioRepository;
 import com.example.ms_envios.repository.SeguimientoRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 /**
- * Gestiona los eventos de seguimiento asociados a cada envío.
+ * Gestiona los eventos de seguimiento asociados a cada envio.
  */
 @Service
 public class SeguimientoService {
 
     private static final Logger log = LoggerFactory.getLogger(SeguimientoService.class);
 
-        @Autowired
-        private SeguimientoRepository seguimientoRepository;
-    @Autowired
-        private SeguimientoMapper seguimientoMapper;
+    private final SeguimientoRepository seguimientoRepository;
+    private final SeguimientoMapper seguimientoMapper;
+    private final EnvioRepository envioRepository;
+
+    public SeguimientoService(
+            SeguimientoRepository seguimientoRepository,
+            SeguimientoMapper seguimientoMapper,
+            EnvioRepository envioRepository) {
+        this.seguimientoRepository = seguimientoRepository;
+        this.seguimientoMapper = seguimientoMapper;
+        this.envioRepository = envioRepository;
+    }
 
     public List<SeguimientoDTO> listar() {
         log.info("Listando seguimientos");
-        return seguimientoRepository.findAll().stream().map(seguimientoMapper::toDTO).collect(Collectors.toList());
+        return seguimientoRepository.findAll().stream()
+                .map(seguimientoMapper::toDTO)
+                .toList();
     }
 
     public SeguimientoDTO obtenerPorId(Integer id) {
         log.info("Buscando seguimiento con id {}", id);
         Seguimiento seguimiento = seguimientoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Seguimiento no encontrado con id " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Seguimiento no encontrado con id " + id));
         return seguimientoMapper.toDTO(seguimiento);
     }
 
     public SeguimientoDTO crear(SeguimientoRequestDTO dto) {
+        validarEnvioExiste(dto.getEnvioId());
         Seguimiento seguimiento = seguimientoMapper.toEntity(dto);
         Seguimiento guardado = seguimientoRepository.save(seguimiento);
         log.info("Seguimiento creado con id {}", guardado.getId());
@@ -48,8 +57,8 @@ public class SeguimientoService {
 
     public SeguimientoDTO actualizar(Integer id, SeguimientoRequestDTO dto) {
         Seguimiento seguimiento = seguimientoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Seguimiento no encontrado con id " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Seguimiento no encontrado con id " + id));
+        validarEnvioExiste(dto.getEnvioId());
         seguimientoMapper.updateEntity(seguimiento, dto);
         Seguimiento guardado = seguimientoRepository.save(seguimiento);
         log.info("Seguimiento actualizado con id {}", guardado.getId());
@@ -65,4 +74,9 @@ public class SeguimientoService {
         return true;
     }
 
+    private void validarEnvioExiste(Integer envioId) {
+        if (!envioRepository.existsById(envioId)) {
+            throw new ResourceNotFoundException("Envio no encontrado con id " + envioId);
+        }
+    }
 }
